load("@gmaven_rules//:defs.bzl", "gmaven_artifact")

android_library(
    name = "module1076",
    srcs = glob(["src/main/java/**/*.java"]),
    resource_files = glob(["src/main/res/**/*"]),
    manifest = "src/main/AndroidManifest.xml",
    custom_package = "com.module1076",
    visibility = ["//visibility:public"],
    deps = [
        "//module339",
        "@maven//:org_checkerframework_checker_compat_qual",
        "//module430",
        "//leafModuleMax",
        "//module385",
        "//module235",
        "//module678",
        "//module524",
        "//module739",
        "@maven//:org_jetbrains_kotlin_kotlin_allopen",
        "//module960",
        "//module1073",
        "//module163",
        "//module319",
        "//module207",
        gmaven_artifact("com.android.support:appcompat-v7:aar:28.0.0"),
        gmaven_artifact("com.android.support.constraint:constraint-layout:aar:1.1.3"),
        gmaven_artifact("com.android.support:multidex:aar:1.0.3"),
        gmaven_artifact("com.android.support.test:runner:aar:1.0.2"),
        gmaven_artifact("com.android.support.test.espresso:espresso-core:aar:3.0.2")
    ],
)