load("@gmaven_rules//:defs.bzl", "gmaven_artifact")

android_library(
    name = "module1078",
    srcs = glob(["src/main/java/**/*.java"]),
    resource_files = glob(["src/main/res/**/*"]),
    manifest = "src/main/AndroidManifest.xml",
    custom_package = "com.module1078",
    visibility = ["//visibility:public"],
    deps = [
        "//module235",
        "//module825",
        "//module335",
        "//module1073",
        "@maven//:org_jetbrains_kotlin_kotlin_allopen",
        "//module24",
        "//module385",
        "//module102",
        "//module634",
        "//leafModuleMax",
        gmaven_artifact("com.android.support:appcompat-v7:aar:28.0.0"),
        gmaven_artifact("com.android.support.constraint:constraint-layout:aar:1.1.3"),
        gmaven_artifact("com.android.support:multidex:aar:1.0.3"),
        gmaven_artifact("com.android.support.test:runner:aar:1.0.2"),
        gmaven_artifact("com.android.support.test.espresso:espresso-core:aar:3.0.2")
    ],
)