load("@gmaven_rules//:defs.bzl", "gmaven_artifact")
load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_android_library")
kt_android_library(
    name = "module1080",
    srcs = glob(["src/main/java/**/*.java", "src/main/java/**/*.kt"]),
    resource_files = glob(["src/main/res/**/*"]),
    manifest = "src/main/AndroidManifest.xml",
    custom_package = "com.module1080",
    visibility = ["//visibility:public"],
    deps = [
        "//module552",
        "//module957",
        "//module835",
        "//module106",
        "//module693",
        "//module1073",
        "//module909",
        "//module113",
        "//module298",
        "//module183",
        "//module852",
        "//module675",
        "//module213",
        "//module385",
        "@maven//:org_jetbrains_kotlin_kotlin_allopen",
        "//module319",
        "//leafModuleMax",
        "//module741",
        gmaven_artifact("com.android.support:appcompat-v7:aar:28.0.0"),
        gmaven_artifact("com.android.support.constraint:constraint-layout:aar:1.1.3"),
        gmaven_artifact("com.android.support:multidex:aar:1.0.3"),
        gmaven_artifact("com.android.support.test:runner:aar:1.0.2"),
        gmaven_artifact("com.android.support.test.espresso:espresso-core:aar:3.0.2")
    ],
)