load("@gmaven_rules//:defs.bzl", "gmaven_artifact")

android_library(
    name = "module1081",
    srcs = glob(["src/main/java/**/*.java"]),
    resource_files = glob(["src/main/res/**/*"]),
    manifest = "src/main/AndroidManifest.xml",
    custom_package = "com.module1081",
    visibility = ["//visibility:public"],
    deps = [
        "//module183",
        "//module235",
        "//module113",
        "//module828",
        "//module753",
        "//module1073",
        "//module1003",
        "//module30",
        "//module1121",
        "//module106",
        "//module977",
        "//module298",
        "@maven//:org_jetbrains_kotlin_kotlin_allopen",
        "//module675",
        "//module414",
        "//module835",
        "//module611",
        "//leafModuleMax",
        "//module385",
        gmaven_artifact("com.android.support:appcompat-v7:aar:28.0.0"),
        gmaven_artifact("com.android.support.constraint:constraint-layout:aar:1.1.3"),
        gmaven_artifact("com.android.support:multidex:aar:1.0.3"),
        gmaven_artifact("com.android.support.test:runner:aar:1.0.2"),
        gmaven_artifact("com.android.support.test.espresso:espresso-core:aar:3.0.2")
    ],
)