load("@gmaven_rules//:defs.bzl", "gmaven_artifact")

android_library(
    name = "module1087",
    srcs = glob(["src/main/java/**/*.java"]),
    resource_files = glob(["src/main/res/**/*"]),
    manifest = "src/main/AndroidManifest.xml",
    custom_package = "com.module1087",
    visibility = ["//visibility:public"],
    deps = [
        "@maven//:androidx_annotation_annotation_experimental",
        "//module133",
        "//module324",
        "//module414",
        "@maven//:androidx_core_core_ktx",
        "//module888",
        "//module472",
        "//module468",
        "@maven//:androidx_fragment_fragment",
        "//leafModuleMax",
        "//module1073",
        "@maven//:io_reactivex_rxjava2_rxandroid",
        "//module447",
        "@maven//:androidx_legacy_legacy_support_core_ui",
        "//module552",
        "//module547",
        "//module0",
        "//module298",
        "//module835",
        "@maven//:org_checkerframework_checker_compat_qual",
        "//module319",
        "//module430",
        "@maven//:javax_inject_javax_inject",
        "//module1085",
        "//module424",
        "@maven//:androidx_transition_transition",
        "//module385",
        "@maven//:androidx_appcompat_appcompat_resources",
        "@maven//:org_jetbrains_kotlin_kotlin_allopen",
        gmaven_artifact("com.android.support:appcompat-v7:aar:28.0.0"),
        gmaven_artifact("com.android.support.constraint:constraint-layout:aar:1.1.3"),
        gmaven_artifact("com.android.support:multidex:aar:1.0.3"),
        gmaven_artifact("com.android.support.test:runner:aar:1.0.2"),
        gmaven_artifact("com.android.support.test.espresso:espresso-core:aar:3.0.2")
    ],
)