load("@gmaven_rules//:defs.bzl", "gmaven_artifact")

android_library(
    name = "module1089",
    srcs = glob(["src/main/java/**/*.java"]),
    resource_files = glob(["src/main/res/**/*"]),
    manifest = "src/main/AndroidManifest.xml",
    custom_package = "com.module1089",
    visibility = ["//visibility:public"],
    deps = [
        "//module468",
        "//module693",
        "@maven//:androidx_annotation_annotation_experimental",
        "//module430",
        "//module319",
        "@maven//:androidx_core_core_ktx",
        "//module1085",
        "//module753",
        "//module995",
        "//module414",
        "//module424",
        "//module106",
        "//module324",
        "//module552",
        "//module337",
        "//module587",
        "//module296",
        "//module178",
        "//module551",
        "//module961",
        "//module862",
        "//module828",
        "//module888",
        "//module121",
        "//module447",
        "//module0",
        "//module385",
        "//module835",
        "//module1185",
        "//module1073",
        "//module953",
        "//module547",
        "//module159",
        "@maven//:androidx_fragment_fragment",
        "//module463",
        "//module478",
        "//module213",
        "//module1075",
        "@maven//:androidx_legacy_legacy_support_core_ui",
        "//leafModuleMax",
        "//module957",
        "//module843",
        "//module388",
        "//module24",
        "@maven//:javax_inject_javax_inject",
        "//module130",
        "@maven//:javax_annotation_javax_annotation_api",
        "//module298",
        "@maven//:androidx_appcompat_appcompat_resources",
        "@maven//:org_jetbrains_kotlin_kotlin_allopen",
        "//module765",
        gmaven_artifact("com.android.support:appcompat-v7:aar:28.0.0"),
        gmaven_artifact("com.android.support.constraint:constraint-layout:aar:1.1.3"),
        gmaven_artifact("com.android.support:multidex:aar:1.0.3"),
        gmaven_artifact("com.android.support.test:runner:aar:1.0.2"),
        gmaven_artifact("com.android.support.test.espresso:espresso-core:aar:3.0.2")
    ],
)