load("@gmaven_rules//:defs.bzl", "gmaven_artifact")

android_library(
    name = "module1091",
    srcs = glob(["src/main/java/**/*.java"]),
    resource_files = glob(["src/main/res/**/*"]),
    manifest = "src/main/AndroidManifest.xml",
    custom_package = "com.module1091",
    visibility = ["//visibility:public"],
    deps = [
        "//module835",
        "//module106",
        "//module319",
        "@maven//:org_checkerframework_checker_compat_qual",
        "//module1073",
        "//module339",
        "//module741",
        "//module42",
        "//module113",
        "//module582",
        "//module1085",
        "//module698",
        "@maven//:org_jetbrains_kotlin_kotlin_allopen",
        "@maven//:io_reactivex_rxjava2_rxandroid",
        "//module430",
        "//leafModuleMax",
        "//module27",
        gmaven_artifact("com.android.support:appcompat-v7:aar:28.0.0"),
        gmaven_artifact("com.android.support.constraint:constraint-layout:aar:1.1.3"),
        gmaven_artifact("com.android.support:multidex:aar:1.0.3"),
        gmaven_artifact("com.android.support.test:runner:aar:1.0.2"),
        gmaven_artifact("com.android.support.test.espresso:espresso-core:aar:3.0.2")
    ],
)