load("@gmaven_rules//:defs.bzl", "gmaven_artifact")

android_library(
    name = "module1092",
    srcs = glob(["src/main/java/**/*.java"]),
    resource_files = glob(["src/main/res/**/*"]),
    manifest = "src/main/AndroidManifest.xml",
    custom_package = "com.module1092",
    visibility = ["//visibility:public"],
    deps = [
        "//module862",
        "//module424",
        "//module888",
        "//module430",
        "//module995",
        "//module1085",
        "//module319",
        "@maven//:io_reactivex_rxjava2_rxandroid",
        "//module468",
        "//module414",
        "//module738",
        "//module1073",
        "//module447",
        "//module145",
        "@maven//:org_checkerframework_checker_compat_qual",
        "//module552",
        "//module42",
        "//module0",
        "//module793",
        "//leafModuleMax",
        "//module385",
        "//module133",
        "@maven//:org_jetbrains_kotlin_kotlin_allopen",
        "//module835",
        "//module106",
        "//module1111",
        "//module298",
        "//module547",
        "//module339",
        gmaven_artifact("com.android.support:appcompat-v7:aar:28.0.0"),
        gmaven_artifact("com.android.support.constraint:constraint-layout:aar:1.1.3"),
        gmaven_artifact("com.android.support:multidex:aar:1.0.3"),
        gmaven_artifact("com.android.support.test:runner:aar:1.0.2"),
        gmaven_artifact("com.android.support.test.espresso:espresso-core:aar:3.0.2")
    ],
)