load("@gmaven_rules//:defs.bzl", "gmaven_artifact")

android_library(
    name = "module1095",
    srcs = glob(["src/main/java/**/*.java"]),
    resource_files = glob(["src/main/res/**/*"]),
    manifest = "src/main/AndroidManifest.xml",
    custom_package = "com.module1095",
    visibility = ["//visibility:public"],
    deps = [
        "//module592",
        "//module1015",
        "//module1073",
        "//module296",
        "//module1065",
        "@maven//:androidx_annotation_annotation_experimental",
        "//module1054",
        "//module47",
        "//module552",
        "//module422",
        "//module382",
        "//module106",
        "//module130",
        "//module30",
        "//module213",
        "//module814",
        "//module414",
        "//module642",
        "//module953",
        "//module430",
        "//module1176",
        "//module0",
        "//module995",
        "//module692",
        "//module1112",
        "//module888",
        "//module235",
        "//module40",
        "//module447",
        "//module307",
        "//module547",
        "//module133",
        "//module835",
        "//module463",
        "//module173",
        "//module409",
        "//module843",
        "//module961",
        "//module785",
        "//module1197",
        "//module793",
        "//module339",
        "//leafModuleMax",
        "//module1005",
        "//module1085",
        "//module769",
        "//module943",
        "//module893",
        "//module159",
        "//module311",
        "//module319",
        "//module385",
        "//module693",
        "//module298",
        "//module530",
        "//module345",
        "//module424",
        "//module1111",
        "//module85",
        "//module632",
        "//module468",
        "//module741",
        "//module1003",
        "//module84",
        "//module121",
        "@maven//:androidx_appcompat_appcompat_resources",
        "//module1063",
        "@maven//:org_jetbrains_kotlin_kotlin_allopen",
        "//module324",
        "//module1092",
        "//module183",
        "//module472",
        "//module862",
        gmaven_artifact("com.android.support:appcompat-v7:aar:28.0.0"),
        gmaven_artifact("com.android.support.constraint:constraint-layout:aar:1.1.3"),
        gmaven_artifact("com.android.support:multidex:aar:1.0.3"),
        gmaven_artifact("com.android.support.test:runner:aar:1.0.2"),
        gmaven_artifact("com.android.support.test.espresso:espresso-core:aar:3.0.2")
    ],
)